--- a/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/sobre.html
+++ b/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/sobre.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/sobre.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+
     <link rel="icon" type="image/png" href="img/route66_icon.png">
     <title>Sobre</title>
   </head>
@@ -20,9 +21,9 @@
       "
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
-          ><img src="img/logoroute66_preta.png" alt="Logo Route 66" height="40"
-        /></a>
+        <a class="navbar-brand" href="#">
+          <img src="img/logoroute66_preta.png" alt="Logo Route 66" height="40"
+      ></a>
         <!--Hamburger Menu -->
         <button
           class="navbar-toggler"
@@ -49,62 +50,74 @@
     <section class="py-5 bg-primary text-white text-center mt-5 hero-section">
       <div class="container">
         <h1 class="display-4 fw-bold ">SOBRE NÓS</h1>
-        <p class="lead">Descubra mais sobre a nossa empresa!</p>
+        <p class="lead">Descobre mais sobre a nossa empresa!</p>
       </div>
     </section>
 
     <section class="container my-5">
       <div class="row align-items-center">
         <div class="col-lg-7 mb-4 mb-lg-0">
-          <h2 class="fw-bold mb-3">Our Story</h2>
+          <img src="img/nossahistoria.png " class="imghistoria"   height="200" >
           <p>
-            Route 66 Adventures was born from a simple passion: the love of the
-            open road and the rich tapestry of American history woven along
-            Route 66. What started as a small group of enthusiasts sharing their
-            favorite road trip has grown into the premier Route 66 tourism
-            agency.
+            A Route 66 Adventures nasceu de uma paixão simples: o amor pela estrada aberta e pela rica tapeçaria da história americana tecida ao longo da Route 66. O que começou como um pequeno grupo de entusiastas a partilhar a sua viagem favorita transformou-se na principal agência de turismo dedicada à Route 66.
           </p>
           <p>
-            For over 15 years, we've been helping travelers from around the
-            world discover the magic of this legendary highway. From the
-            neon-lit diners and vintage motels to the breathtaking natural
-            wonders and vibrant local communities, we curate experiences that
-            capture the authentic spirit of Route 66.
+            Há mais de 15 anos que ajudamos viajantes de todo o mundo a descobrir a magia desta lendária estrada. Desde os diners iluminados por néon e motéis vintage até às maravilhas naturais de cortar a respiração e comunidades locais vibrantes, criamos experiências que captam o verdadeiro espírito da Route 66.
           </p>
           <p>
-            Our team of expert guides are not just tour leaders—they're
-            storytellers, historians, and Route 66 enthusiasts who bring every
-            mile to life with fascinating tales and insider knowledge that you
-            won't find in any guidebook.
+            A nossa equipa de guias especializados não são apenas líderes de excursão — são contadores de histórias, historiadores e apaixonados pela Route 66 que dão vida a cada quilómetro com relatos fascinantes e conhecimento de quem realmente conhece a estrada, muito para além de qualquer guia turístico.
           </p>
         </div>
-        <div class="col-lg-5 text-center">
-          <img
-            src="img/runway.png"
-            class="img-fluid rounded shadow"
-            alt="Route 66 Story"
-          />
+        <div class="col-lg-5">
+          <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100 img-fluid carousel-img-fixed" src="img/carrosel/Arizona_66.avif" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid carousel-img-fixed" src="img/carrosel/carro_66.webp" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid carousel-img-fixed" src="img/carrosel/road_66.jpg" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 img-fluid carousel-img-fixed" src="img/carrosel/old_66.png" alt="Fourth slide">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
       </div>
     </section>
 
-  </body>
-  
     <!-- Values Section -->
     <section class="py-5 bg-light">
       <div class="container">
         <h2 class="fw-bold text-center mb-4">Os nossos valores</h2>
         <p class="text-center mb-5">
-          These core principles guide every tour we create and every relationship we build
+          Estes princípios orientam cada viagem que organizamos e cada relação que construímos
         </p>
         <div class="row g-4 justify-content-center">
           <div class="col-6 col-md-3">
             <div class="card h-100 text-center border-0 shadow-sm values-animate">
               <div class="display-4">🏅</div>
               <div class="card-body">
-                <h5 class="card-title">Excellence</h5>
+                <h5 class="card-title">Excelência</h5>
                 <p class="card-text small">
-                  We're committed to delivering exceptional experiences that exceed expectations
+                  Comprometemo-nos a proporcionar experiências excecionais que superam as expectativas
                 </p>
               </div>
             </div>
@@ -113,9 +126,9 @@
             <div class="card h-100 text-center border-0 shadow-sm values-animate">
               <div class="display-4">♥️</div>
               <div class="card-body">
-                <h5 class="card-title">Passion</h5>
+                <h5 class="card-title">Paixão</h5>
                 <p class="card-text small">
-                  Our love for Route 66 and American culture drives everything we do
+                  O nosso amor pela Route 66 e pela cultura americana impulsiona tudo o que fazemos
                 </p>
               </div>
             </div>
@@ -124,9 +137,9 @@
             <div class="card h-100 text-center border-0 shadow-sm values-animate">
               <div class="display-4">🛡️</div>
               <div class="card-body">
-                <h5 class="card-title">Trust</h5>
+                <h5 class="card-title">Confiança</h5>
                 <p class="card-text small">
-                  Your safety and satisfaction are our top priorities on every journey
+                  A tua segurança e satisfação são as nossas maiores prioridades em cada viagem
                 </p>
               </div>
             </div>
@@ -135,9 +148,9 @@
             <div class="card h-100 text-center border-0 shadow-sm values-animate">
               <div class="display-4">🤝🏻</div>
               <div class="card-body">
-                <h5 class="card-title">Community</h5>
+                <h5 class="card-title">Comunidade</h5>
                 <p class="card-text small">
-                  We build lasting connections with travelers and local communities alike
+                  Criamos ligações duradouras com viajantes e comunidades locais
                 </p>
               </div>
             </div>
@@ -153,9 +166,7 @@
           <div class="col-md-3 mb-4">
             <h5>Route 66</h5>
             <p class="small">
-              Descobre a lendária estrada americana e os seus pontos de
-              interesse.<br />Um guia completo para a tua viagem pela Route
-              66.<br />Explorar é fácil quando o caminho está traçado!
+              Descobre a lendária estrada americana e os seus pontos de interesse.<br />Um guia completo para a tua viagem pela Route 66.<br />Explorar é fácil quando o caminho está traçado!
             </p>
           </div>
           <div class="col-md-3 mb-4">
