Atualização das Páginas
Adicionei media query e outros ajustes as páginas

--- a/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/amarillo.html
+++ b/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/amarillo.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/amarillo.css" />
-    <link rel="stylesheet" href="styles/global.css" />
+      rel="stylesheet">
+    <link rel="stylesheet" href="styles/amarillo.css">
+    <link rel="stylesheet" href="styles/global.css" >
 
-    <link rel="icon" type="image/png" href="img/route66_icon.png" />
+    <link rel="icon" type="image/png" href="img/route66_icon.png" >
     <title>Amarillo-Texas</title>
   </head>
   <body>
     <!--Navbar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top"
-      style="
-        backdrop-filter: blur(2px);
-        background-color: rgba(255, 255, 255, 0.3);
-      "
-    >
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
             src="img/logoroute66_preta.png"
             alt="Logo Route 66"
-            height="40"
-          />
+            height="40"/>
         </a>
         <!--Hamburger Menu -->
         <button
@@ -39,13 +31,14 @@
           data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="amarillo.html">Turismo</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="amarillo.html">Turismo</a>
+            </li>
             <li class="nav-item"><a class="nav-link" href="#">Contactos</a></li>
             <li class="nav-item">
               <a class="nav-link" href="sobre.html">Sobre Nós</a>
@@ -80,8 +73,7 @@
           </div>
           <div class="col-6 col-md-3">
             <div
-              class="card h-100 text-center border-0 shadow-sm values-animate"
-            >
+              class="card h-100 text-center border-0 shadow-sm values-animate">
               <div class="display-6">👥</div>
               <div class="card-body">
                 <h5 class="card-title">190 695</h5>
@@ -91,8 +83,7 @@
           </div>
           <div class="col-6 col-md-3">
             <div
-              class="card h-100 text-center border-0 shadow-sm values-animate"
-            >
+              class="card h-100 text-center border-0 shadow-sm values-animate">
               <div class="display-6">🏛️</div>
               <div class="card-body">
                 <h5 class="card-title">1887</h5>
@@ -134,27 +125,32 @@
           <img src="img/palo_duro.webp" alt="Palo Duro Canyon" />
           <h3>Palo Duro Canyon</h3>
           <p>
-          Localizado em Texas e famoso pelas suas impressionantes formações rochosas.
+            Localizado em Texas e famoso pelas suas impressionantes formações
+            rochosas.
           </p>
-          <a href="#" class="learn-more">LEARN MORE</a>
+          <a href="#" class="saber-mais">SABER MAIS</a>
         </div>
 
         <div class="card_atracoes">
           <img src="img/cadillac.webp" alt="Cadillac Ranch" />
           <h3>Cadillac Ranch</h3>
-          <p> Instalação de arte pública que homenageia a cultura automóvel americana e a sua evolução, 
-            especialmente as "barbatanas" dos Cadillacs.</p>
-          <a href="#" class="learn-more">LEARN MORE</a>
+          <p>
+            Instalação de arte pública que homenageia a cultura automóvel
+            americana e a sua evolução, especialmente as "barbatanas" dos
+            Cadillacs.
+          </p>
+          <a href="#" class="saber-mais">SABER MAIS</a>
         </div>
 
         <div class="card_atracoes">
           <img src="img/big_texan.webp" alt="The Big Texan" />
           <h3>The Big Texan</h3>
           <p>
-            Restaurante e motel, conhecido principalmente por um desafio de comida: comer um bife de 2kg.
-            Se o desafio for completo, a refeição é gratuita. Aceitas este desafio?
+            Restaurante e motel, conhecido principalmente por um desafio de
+            comida: comer um bife de 2kg. Se o desafio for completo, a refeição
+            é gratuita. Aceitas este desafio?
           </p>
-          <a href="#" class="learn-more">LEARN MORE</a>
+          <a href="#" class="saber-mais">SABER MAIS</a>
         </div>
       </section>
     </section>
@@ -165,96 +161,90 @@
       <div class="row g-4">
         <div class="col-md-6">
           <div class="hotel-card card p-4 h-100">
-            <div class="d-flex justify-content-between align-items-center mb-2">
-              <span class="fw-bold">Best Western Plus Medical Center</span>
-              <span class="text-warning fw-bold">★ 4.5</span>
+            <div class="hotel-info">
+              <div class="d-flex justify-content-between align-items-center mb-2">
+                <span class="fw-bold">Best Western Plus Medical Center</span>
+                <span class="text-warning fw-bold">★ 4.5</span>
+              </div>
+              <span class="hotel-type badge bg-light text-dark mb-2">Excelente</span>
+              <div class="mb-2">
+                <span class="tag">Pequeno Almoço</span>
+                <span class="tag">Piscina interior</span>
+                <span class="tag">Ar-condicionado</span>
+                <span class="tag">Casa de banho privada</span>
+              </div>
+              <div class="d-flex justify-content-between align-items-center mt-3">
+                <span>Price Range</span>
+                <span class="price-range">$$$</span>
+              </div>
             </div>
-            <span class="hotel-type badge bg-light text-dark mb-2">Excelente</span>
-            <p class="mb-2">
-              Best Western Plus Medical Center providencia acomodações em Amarillo. 
-              Este hotel de 3 estrelas dispõe de um centro de fitness, quartos com ar condicionado, acesso Wi-Fi gratuito 
-              e casa de banho privativa
-            </p>
-            <div class="mb-2">
-              <span class="tag">Pequeno Almoço</span>
-              <span class="tag">Piscina interior</span>
-              <span class="tag">Ar-condicionado</span>
-              <span class="tag">Casa de banho privada</span>
-            </div>
-            <div class="d-flex justify-content-between align-items-center mt-3">
-              <span>Price Range</span>
-              <span class="price-range">$$$</span>
-            </div>
+            <img src="img/medical_center.jpg" alt="Hotel Medical Center">
           </div>
         </div>
         <div class="col-md-6">
           <div class="hotel-card card p-4 h-100">
-            <div class="d-flex justify-content-between align-items-center mb-2">
-              <span class="fw-bold"
-                >Embassy Suites Amarillo Downtown</span>
-              <span class="text-warning fw-bold">★ 4.3</span>
+            <div class="hotel-info">
+              <div class="d-flex justify-content-between align-items-center mb-2">
+                <span class="fw-bold">Embassy Suites Amarillo</span>
+                <span class="text-warning fw-bold">★ 4.3</span>
+              </div>
+              <span class="hotel-type badge bg-light text-dark mb-2">Excelente</span>
+              <div class="mb-2">
+                <span class="tag">Free WiFi</span>
+                <span class="tag">Pequeno Almoço</span>
+                <span class="tag">Restauranet</span>
+                <span class="tag">Duche</span>
+              </div>
+              <div class="d-flex justify-content-between align-items-center mt-3">
+                <span>Price Range</span>
+                <span class="price-range">$$</span>
+              </div>
             </div>
-            <span class="hotel-type badge bg-light text-dark mb-2">Excelente</span>
-            <p class="mb-2">
-             Em Amarillo, 4,7 km de Austin Park, Embassy Suites Amarillo Downtown dispõe de acomodações
-             com ar condicionado e um bar. 
-            </p>
-            <div class="mb-2">
-              <span class="tag">Free WiFi</span>
-              <span class="tag">Pequeno Almoço</span>
-              <span class="tag">Restauranet</span>
-              <span class="tag">Duche</span>
-            </div>
-            <div class="d-flex justify-content-between align-items-center mt-3">
-              <span>Price Range</span>
-              <span class="price-range">$$</span>
-            </div>
+            <img src="img/embassy_suites.avif" alt="Hotel Embassy">
           </div>
         </div>
         <div class="col-md-6">
           <div class="hotel-card card p-4 h-100">
-            <div class="d-flex justify-content-between align-items-center mb-2">
-              <span class="fw-bold">Baymont by Wyndham Amarillo East</span>
-              <span class="text-warning fw-bold">★ 4</span>
+            <div class="hotel-info">
+              <div class="d-flex justify-content-between align-items-center mb-2">
+                <span class="fw-bold">Baymont by Wyndham Amarillo East</span>
+                <span class="text-warning fw-bold">★ 4</span>
+              </div>
+              <span class="hotel-type badge bg-light text-dark mb-2">Muito Bom</span>
+              <div class="mb-2">
+                <span class="tag">Estacionamenot gratuito</span>
+                <span class="tag">Piscina</span>
+                <span class="tag">Kitchenette</span>
+                <span class="tag">Banheira</span>
+              </div>
+              <div class="d-flex justify-content-between align-items-center mt-3">
+                <span>Price Range</span>
+                <span class="price-range">$$</span>
+              </div>
             </div>
-            <span class="hotel-type badge bg-light text-dark mb-2">Muito Bom</span>
-            <p class="mb-2">
-             Em Amarillo, na área de Texas, Baymont by Wyndham Amarillo East localiza-se a 5,3 km de Austin Park. 
-             Este hotel apresenta centro de fitness e uma receção aberta 24 horas.
-            </p>
-            <div class="mb-2">
-              <span class="tag">Estacionamenot gratuito</span>
-              <span class="tag">Piscina</span>
-              <span class="tag">Kitchenette</span>
-              <span class="tag">Banheira</span>
-            </div>
-            <div class="d-flex justify-content-between align-items-center mt-3">
-              <span>Price Range</span>
-              <span class="price-range">$$</span>
-            </div>
+            <img src="img/baymont_hotel.avif" alt="Baymont Hotel">
           </div>
         </div>
         <div class="col-md-6">
           <div class="hotel-card card p-4 h-100">
-            <div class="d-flex justify-content-between align-items-center mb-2">
-              <span class="fw-bold"> Holiday Inn Express & Suites Amarillo West by IHG</span>
-              <span class="text-warning fw-bold">★ 4.4</span>
+            <div class="hotel-info">
+              <div class="d-flex justify-content-between align-items-center mb-2">
+                <span class="fw-bold">Holiday Inn Express & Suites Amarillo West by IHG</span>
+                <span class="text-warning fw-bold">★ 4.4</span>
+              </div>
+              <span class="hotel-type badge bg-light text-dark mb-2">Muito Bom</span>
+              <div class="mb-2">
+                <span class="tag">Ar condicionado</span>
+                <span class="tag">Piscina interior</span>
+                <span class="tag">Suites</span>
+                <span class="tag">Bom pequeno almoço</span>
+              </div>
+              <div class="d-flex justify-content-between align-items-center mt-3">
+                <span>Price Range</span>
+                <span class="price-range">$$</span>
+              </div>
             </div>
-            <span class="hotel-type badge bg-light text-dark mb-2"> Muito Bom</span>
-            <p class="mb-2">
-              Todos os quartos deste hotel incluem um micro-ondas e frigoríficos. Está localizado no lado oeste do centro da cidade de Amarillo. 
-              O hotel oferece fácil acesso à Interestatal 40. O hotel serve um pequeno-almoço diário gratuito.
-            </p>
-            <div class="mb-2">
-              <span class="tag">Ar condicionado</span>
-              <span class="tag">Piscina interior</span>
-              <span class="tag">Suites</span>
-              <span class="tag">Bom pequeno almoço</span>
-            </div>
-            <div class="d-flex justify-content-between align-items-center mt-3">
-              <span>Price Range</span>
-              <span class="price-range">$$</span>
-            </div>
+            <img src="img/holiday_inn.avif" alt="Holiday Inn">
           </div>
         </div>
       </div>
@@ -279,15 +269,13 @@
                 <a
                   href="#"
                   class="text-light text-decoration-none fw-bold-hover text-decoration-underline-hover"
-                  >Sobre Nós</a
-                >
+                  >Sobre Nós</a>
               </li>
               <li>
                 <a
                   href="#"
                   class="text-light text-decoration-none fw-bold-hover text-decoration-underline-hover"
-                  >Pontos de Interesse</a
-                >
+                  >Pontos de Interesse</a>
               </li>
               <li>
                 <a
