--- a/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/sobre.html
+++ b/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/sobre.html
@@ -14,12 +14,7 @@
 
   <body>
     <nav
-      class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top"
-      style="
-        backdrop-filter: blur(6px);
-        background-color: rgba(255, 255, 255, 0.3);
-      "
-    >
+      class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="img/logoroute66_preta.png" alt="Logo Route 66" height="40"
@@ -50,7 +45,7 @@
     <section class="py-5 bg-primary text-white text-center mt-5 hero-section">
       <div class="container">
         <h1 class="display-4 fw-bold ">SOBRE NÓS</h1>
-        <p class="lead">Descobre mais sobre a nossa empresa!</p>
+        <p class="sobre">Descobre mais sobre a nossa empresa!</p>
       </div>
     </section>
 
