--- a/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/amarillo.html
+++ b/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/amarillo.html
@@ -37,7 +37,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="amarillo.html">Turismo</a>
+              <a class="nav-link" href="turismo.html">Turismo</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="#">Contactos</a></li>
             <li class="nav-item">
