--- a/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/jogocartas.html
+++ b/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/jogocartas.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Jogo da Memória</title>
-    <link rel="stylesheet" href="jogocartas.css">
+    <!-- CSS Global primeiro -->
     <link rel="stylesheet" href="styles/global.css">
+    <!-- CSS Específico depois -->
+    <link rel="stylesheet" href="jogocartas.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/route66_icon.png">
 </head>
-<body>
-       <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
+<body class="d-flex flex-column min-vh-100">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img
@@ -42,20 +45,23 @@
       </div>
     </nav>
 
+    <!-- Wrapper de conteúdo: adicionado mb-5 para espaçamento inferior -->
+    <div class="flex-grow-1 d-flex flex-column justify-content-center mb-5">
+        <section class="py-5 bg-primary text-white text-center mt-5 hero-section">
+          <div class="container">
+            <h1 class="display-4 fw-bold ">SOBRE NÓS</h1>
+            <p class="sobre">Descobre mais sobre a nossa empresa!</p>
+          </div>
+        </section>
 
-
-    <section class="py-5 bg-primary text-white text-center mt-5 hero-section">
-      <div class="container">
-        <h1 class="display-4 fw-bold ">SOBRE NÓS</h1>
-        <p class="sobre">Descobre mais sobre a nossa empresa!</p>
-      </div>
-    </section>
-
-     <section class="memory-game">
-    </section>
+        <div id="contador"></div>
+         <!-- Jogo da memoria -->
+        <section class="memory-game">
+        </section>
+    </div> <!-- Div fechada aqui para não incluir o footer no flex container central -->
   
     <!-- Footer -->
-    <footer class="text-light pt-5 pb-3 mt-5">
+   <footer class="text-light pt-5 pb-3 mt-auto">
       <div class="container">
         <div class="row">
           <div class="col-md-3 mb-4">
@@ -112,6 +118,8 @@
       </div>
     </footer>
 
+    <!-- Script do Bootstrap (Necessário para a navbar) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="jogocartas.js"></script>
 </body>
 </html>
