--- a/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/jogocartas.html
+++ b/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/jogocartas.html
@@ -53,11 +53,12 @@
             <p class="sobre">Descobre mais sobre a nossa empresa!</p>
           </div>
         </section>
-
-        <div id="contador"></div>
-         <!-- Jogo da memoria -->
-        <section class="memory-game">
-        </section>
+        <div id = "jogo-borda">
+            <div id="contador"></div>
+            <!-- Jogo da memoria -->
+            <section class="memory-game">
+            </section>
+        </div>
     </div> <!-- Div fechada aqui para não incluir o footer no flex container central -->
   
     <!-- Footer -->
