--- a/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/jogocartas.html
+++ b/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560(Sobre)/Saisha_Ruiz_2023142560/jogocartas.html
@@ -47,14 +47,16 @@
 
     <!-- Wrapper de conteúdo: adicionado mb-5 para espaçamento inferior -->
     <div class="flex-grow-1 d-flex flex-column justify-content-center mb-5">
-        <section class="py-5 bg-primary text-white text-center mt-5 hero-section">
+        <section class="py-5 bg-primary text-white text-center mt-10 hero-section">
           <div class="container">
-            <h1 class="display-4 fw-bold ">SOBRE NÓS</h1>
-            <p class="sobre">Descobre mais sobre a nossa empresa!</p>
+            <h1 class="titulo">JOGO DA MEMORIA</h1>
+            <p class="subtitulo">Coloque o seus conhecimentos em pratica com o nosso jogo da memoria da lendaria rota 66!</p>
           </div>
+        </section>
         </section>
         <div id = "jogo-borda">
             <div id="contador"></div>
+            <button id="btn-recomecar"><img src="recomecar.svg" alt=""></button>
             <!-- Jogo da memoria -->
             <section class="memory-game">
             </section>
